--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,6 @@ services:
     container_name: spark
     environment:
       - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
     ports:
       - "7077:7077"
       - "8080:8080"
@@ -27,15 +23,12 @@ services:
 
   # Spark Worker
   worker:
-    image: docker.io/bitnami/spark:3.3
-    #build:
-    #  context: ./app_spark  # Specify the context for the build
+    image: apache/spark:3.5.1
     container_name: worker
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark:7077
     depends_on:
       - spark
+    command: >
+      /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark:7077
     ports:
       - "8084:8084"
     volumes:
