stil tryna fix when writing things

--- a/app_spark/Dockerfile
+++ b/app_spark/Dockerfile
@@ -9,5 +9,7 @@ ENV PATH="/opt/spark/bin:${PATH}"
 
 EXPOSE 7077 8080
 
+USER root
+
 CMD ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
 
