--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,3 @@
-volumes:
-  middle_var: {}
-  historical_var: {}
-  broker_var: {}
-  coordinator_var: {}
-  router_var: {}
-  druid_shared: {}
-
 services:
   postgres:
     image: postgres:17.5-alpine3.22
@@ -127,5 +119,44 @@ services:
     networks:
       - localnet
 
+  redis:
+    image: redis:7
+    container_name: redis
+
+superset:
+    container_name: superset
+    build:
+      context: ./app_superset
+      dockerfile: Dockerfile
+    environment:
+      - SUPERSET_SECRET_KEY=your_secret_key
+      - PYTHONPATH=/app/pythonpath
+      - REDIS_HOST=redis
+      - POSTGRES_HOST=postgres
+      - POSTGRES_USER=usuarioPostgres
+      - POSTGRES_PASSWORD=postgres!2025
+      - POSTGRES_DB=db_postgres
+    ports:
+      - "8088:8088"
+    depends_on:
+      - redis
+      - postgres
+    command: >
+      sh -c "
+        superset db upgrade;
+        superset fab create-admin --username=admin --firstname=Superset --lastname=Admin --email=admin@example.com --password=admin;
+        superset init;
+        superset run -h 0.0.0.0 -p 8088
+      "
+
 networks:
   localnet:
+
+volumes:
+  middle_var: {}
+  historical_var: {}
+  broker_var: {}
+  coordinator_var: {}
+  router_var: {}
+  druid_shared: {}
+  pgdata:
