--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,13 +141,14 @@ services:
     depends_on:
       - redis
       - postgres
+      - router
     command: >
       sh -c "
         superset db upgrade;
-        superset fab create-admin --username=admin --firstname=Superset --lastname=Admin --email=admin@example.com --password=admin;
-        superset init;
         superset run -h 0.0.0.0 -p 8088
       "
+    networks:
+      - localnet
 
 networks:
   localnet:
