--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,6 +145,8 @@ services:
     command: >
       sh -c "
         superset db upgrade;
+        superset fab create-admin --username=admin --firstname=Superset --lastname=Admin --email=admin@example.com --pa>
+        superset init;
         superset run -h 0.0.0.0 -p 8088
       "
     networks:
