--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,7 +145,7 @@ services:
     command: >
       sh -c "
         superset db upgrade;
-        superset fab create-admin --username=admin --firstname=Superset --lastname=Admin --email=admin@example.com --pa>
+        superset fab create-admin --username=admin --firstname=Superset --lastname=Admin --email=admin@example.com --password=admin;
         superset init;
         superset run -h 0.0.0.0 -p 8088
       "
